# fastapi-template

./: docker-compose.yml
src/: .env  Dockerfile  main.py  models.py  pyproject.toml
src/routers/: message.py
