[tool.poetry]
name = "taroot"
version = "0.1.0"
description = ""
authors = ["Vincent550102 <5020559@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.7.2"
python-dotenv = "^1.0.0"
fastapi = {extras = ["all"], version = "^0.109.0"}
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
